--- a/FantasyInvaders/nbproject/private/private.properties
+++ b/FantasyInvaders/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Manalili Family\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\angel\\AppData\\Roaming\\NetBeans\\19\\build.properties
